--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 runner:
-  flash_method: auto
+  flash_method: openocd
+  openocd_cfg: "/usr/share/openocd/scripts/board/pico2.cfg"
   serial_port: ""
   serial_baud: 115200
   serial_timeout_s: 8
